--- a/ParvatiArchana/app/src/main/res/layout/activity_liner_nested.xml
+++ b/ParvatiArchana/app/src/main/res/layout/activity_liner_nested.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -9,3 +14,4 @@
     >
 
 </LinearLayout>
+</ScrollView>
