Drop down in product WIP
Signed-off-by: singhsiddh <singhsiddh@yahoo.com>

--- a/ParvatiArchana/app/src/main/res/layout/activity_liner_nested.xml
+++ b/ParvatiArchana/app/src/main/res/layout/activity_liner_nested.xml
@@ -12,6 +12,12 @@
     android:id="@+id/linernestedlay"
     android:orientation="vertical"
     >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/totalitemsummary">
 
+    </TextView>
 </LinearLayout>
+
 </ScrollView>
