--- a/ParvatiArchana/app/src/main/res/menu/sai_menu.xml
+++ b/ParvatiArchana/app/src/main/res/menu/sai_menu.xml
@@ -25,4 +25,8 @@
         android:title="Product Mangment "
         />
 
+    <item  android:id="@+id/item22002"
+        android:title="Table Data "
+        />
+
 </menu>
