--- a/ParvatiArchana/app/src/main/res/layout/list_item.xml
+++ b/ParvatiArchana/app/src/main/res/layout/list_item.xml
@@ -7,16 +7,23 @@
     android:layout_margin="5dp"
     android:padding="8dp"
     app:cardCornerRadius="8dp">
+    <!--
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="horizontal"
+        >
+        -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:padding="10dp">
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Holiday Name"
             android:textColor="@android:color/black"
@@ -25,12 +32,21 @@
 
         <TextView
             android:id="@+id/date"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Holiday Date"
             android:textSize="23sp" />
+        <Button
+            android:id="@+id/tab_btn"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Delete"
+            android:textSize="23sp" />
 
     </LinearLayout>
+    <!--
+    </ScrollView>
+    -->
 </androidx.cardview.widget.CardView>
 <!--
 </android.support.v7.widget.CardView>
