--- a/ParvatiArchana/app/src/main/res/menu/sai_menu.xml
+++ b/ParvatiArchana/app/src/main/res/menu/sai_menu.xml
@@ -28,5 +28,9 @@
     <item  android:id="@+id/item22002"
         android:title="Table Data "
         />
+    <item  android:id="@+id/item22003"
+        android:title="Myntra"
+        />
+
 
 </menu>
