--- a/ParvatiArchana/app/src/main/res/layout/activity_login.xml
+++ b/ParvatiArchana/app/src/main/res/layout/activity_login.xml
@@ -18,6 +18,7 @@
         android:layout_marginTop="32dp"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
+        android:text="singhsiddh@yahoo.com"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:hint="@string/prompt_password"
+        android:text="gautam"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
