--- a/ParvatiArchana/app/src/main/res/layout/myntra_header_fragment.xml
+++ b/ParvatiArchana/app/src/main/res/layout/myntra_header_fragment.xml
@@ -10,13 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
-
+    <LinearLayout
+        android:id="@+id/myntra_head_ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+    </LinearLayout>
 
 <LinearLayout
+    android:id="@+id/myntra_head_ll_sai"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     >
+    <!--
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,5 +59,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="buttonf-7"></Button>
+        -->
 </LinearLayout>
 </FrameLayout>
