dynamically data loading in mainmynta section
Signed-off-by: singhsiddh <singhsiddh@yahoo.com>

--- a/ParvatiArchana/app/src/main/res/layout/myntra_header_fragment.xml
+++ b/ParvatiArchana/app/src/main/res/layout/myntra_header_fragment.xml
@@ -7,6 +7,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/totalitemsummary1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
@@ -16,6 +17,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
+        <!-- TODO: Update blank fragment layout -->
+
     </LinearLayout>
 
 <LinearLayout
