Signed-off-by: singhsiddh <singhsiddh@yahoo.com>

--- a/ParvatiArchana/app/src/main/res/layout/myntr_main_fragment.xml
+++ b/ParvatiArchana/app/src/main/res/layout/myntr_main_fragment.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".myntra.MyntrMainFragment">
 
+    <!--table rows main content will be load in recyclerview -->
+    <androidx.recyclerview.widget.RecyclerView
+
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
