--- a/ParvatiArchana/app/src/main/res/layout/muntra_recycle_view_main_activity.xml
+++ b/ParvatiArchana/app/src/main/res/layout/muntra_recycle_view_main_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--relative-->
+<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:paddingBottom="@dimen/activity_vertical_margin"
@@ -20,4 +21,4 @@ android:paddingTop="@dimen/activity_vertical_margin">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="After  Recycler View"></TextView>
-</RelativeLayout>
+</FrameLayout >
