--- a/ParvatiArchana/app/src/main/res/layout/myntra_recyview_items_row_layout.xml
+++ b/ParvatiArchana/app/src/main/res/layout/myntra_recyview_items_row_layout.xml
@@ -3,7 +3,12 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <TextView
+        android:id="@+id/sai_it_om"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="om sai ram ji i ji "
+        />
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
