--- a/ParvatiArchana/app/src/main/res/layout/myntra_recyview_items_row_layout.xml
+++ b/ParvatiArchana/app/src/main/res/layout/myntra_recyview_items_row_layout.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+<!--
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+ -->
     <TextView
         android:id="@+id/sai_it_om"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="om sai ram ji i ji "
         />
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <LinearLayout
+        android:id="@+id/lay_row_1"
         android:layout_width="match_parent"
+
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
@@ -20,6 +29,7 @@
             android:layout_height="400dp" />
 
         <LinearLayout
+            android:id="@+id/lay_row_2"
             android:layout_width="400dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -40,7 +50,7 @@
                 android:id="@+id/item_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-<!-- at add butotn has to add listner-->
+
 
             <Button
                 android:id="@+id/add_card"
@@ -50,5 +60,7 @@
         </LinearLayout>
 
     </LinearLayout>
-
+</LinearLayout>
+<!--
 </androidx.cardview.widget.CardView>
+-->
