--- a/ParvatiArchana/app/src/main/res/layout/myntra_buttom_fragment.xml
+++ b/ParvatiArchana/app/src/main/res/layout/myntra_buttom_fragment.xml
@@ -19,6 +19,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Profile"></Button>
+        <Button xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/notif_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="32dp"
+            android:minHeight="32dp"
+            android:background="@drawable/ic_bell"
+
+            android:text="0"
+            android:textSize="16sp"
+            android:textColor="@android:color/white"
+            android:gravity="center"
+            android:padding="2dp"
+            android:singleLine="true">
+        </Button>
+
     </LinearLayout>
 
 </FrameLayout>
