2 dimentional array object fix in angular
Signed-off-by: singhsiddh <singhsiddh@yahoo.com>

--- a/Kaali-Gui/appointment-kaali/src/app/appointment-booking/appointment-booking.component.html
+++ b/Kaali-Gui/appointment-kaali/src/app/appointment-booking/appointment-booking.component.html
@@ -12,11 +12,16 @@ jai Buddha babaa
   </select>
 
 <ul> 
-    <li *ngFor="let data of   bookingMonthData    ; let i = index"> 
+    <li *ngFor="let data of   bookingMonthData   ; let i = index"> 
         
-      <span *ngFor="let dayData of   bookingMonthData[i]    ; let j = index"> 
+      <span *ngFor="let dayData of   data    ; let j = index"> 
       <!-- this also works <button class="button" >sai{{bookingMonthData[i][j]}}</button>-->
-      <button class="button" (click)="callData()"> {{dayData}}</button> 
+     
+      <button class="button" (click)="callData()"> {{dayData.day }}</button> 
+    
       </span>
     </li> 
+    <li *ngFor="let rl of   roles2    ; let i = index">
+      {{rl.name}}
+    </li>
   </ul>
