--- a/Kaali-Gui/appointment-kaali/src/app/appointment-booking/appointment-booking.component.html
+++ b/Kaali-Gui/appointment-kaali/src/app/appointment-booking/appointment-booking.component.html
@@ -16,9 +16,12 @@ jai Buddha babaa
         
       <span *ngFor="let dayData of   data    ; let j = index"> 
       <!-- this also works <button class="button" >sai{{bookingMonthData[i][j]}}</button>-->
-     
-      <button class="button" (click)="callData()"> {{dayData.day }}</button> 
-    
+      <span *ngIf="dayData.availability !== 0 ">
+      <button class="button" (click)="callData()"> ${{dayData.day }}</button> 
+      </span>
+      <span *ngIf="dayData.availability == 0 ">
+        <button class="button" (click)="callData()"> *{{dayData.day }}</button> 
+        </span>
       </span>
     </li> 
     <li *ngFor="let rl of   roles2    ; let i = index">
