commit at 3 march 9.23 pm by siddharth
Signed-off-by: singhsiddh <singhsiddh@yahoo.com>

--- a/Kaali-Gui/appointment-kaali/src/app/appointment-booking/appointment-booking.component.html
+++ b/Kaali-Gui/appointment-kaali/src/app/appointment-booking/appointment-booking.component.html
@@ -2,6 +2,9 @@
 Sai baba ki jai
 jai Buddha babaa 
 <button class="button" (click)="fillData()">data..</button>
+<button class="button" (click)="callMonthWiseAvailability()">data.2222.</button>
+
+
 <h4>Basic mat-select</h4>
 
 <select 
@@ -21,6 +24,8 @@ jai Buddha babaa
       </span>
       <span *ngIf="dayData.availability == 0 ">
         <button class="button" (click)="callData()"> *{{dayData.day }}</button> 
+
+
         </span>
       </span>
     </li> 
