--- a/Kaali-Gui/appointment-kaali/src/app/appointment-booking-slot/appointment-booking-slot.component.html
+++ b/Kaali-Gui/appointment-kaali/src/app/appointment-booking-slot/appointment-booking-slot.component.html
@@ -1,6 +1,17 @@
 <p>appointment-booking-slot works!</p>
 
-<span>
-
-    Slot detils ....................{{slotdata|json}}
+<span *ngFor="let data of   slotdata   ; let i = index"> 
+  <!-- <span *ngFor="let data of   data1[i]   ; let j = index"> -->
+   
+av:{{data.available}}
+  st:{{data.slotStartTime}}
+    <span *ngIf="data.available !== 0 ">
+        <button class="button" > ${{data.slotStartTime }}</button> 
+        </span>
+        <span *ngIf="data.available == 0 ">
+          <button class="button" > *{{data.slotStartTime }}</button> 
+  
+  
+          </span>
+       <!--  </span>--> 
 </span>
