Signed-off-by: singhsiddh <singhsiddh@yahoo.com>

--- a/Kaali-Gui/appointment-kaali/src/app/appointment-booking/appointment-booking.component.css
+++ b/Kaali-Gui/appointment-kaali/src/app/appointment-booking/appointment-booking.component.css
@@ -1,16 +1,29 @@
 
   .button-avl {
-    border: 1px solid #0066cc;
-    background-color: #0099cc;
-    color: #3af50c;
-    padding: 5px 10px;
+  
+  
+
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 1px 2px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
   }
 
   .button-dis {
-    border: 1px solid #0066cc;
-    background-color: #cc1f00;
-    color: #32797e;
-    padding: 5px 10px;
+   
+    cursor: not-allowed;
+    pointer-events: none;
+    border: none;
+    color: white;
+    padding: 1px 2px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
   }
 
   button:hover {
