--- a/Kaali-Gui/appointment-kaali/src/app/appointment-booking/appointment-booking.component.css
+++ b/Kaali-Gui/appointment-kaali/src/app/appointment-booking/appointment-booking.component.css
@@ -4,12 +4,14 @@
   
 
     background-color: #4CAF50; /* Green */
-    border: none;
+    border: 1px solid;
     color: white;
     padding: 1px 2px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
+    width: 35px;
+    height: 35px;
     font-size: 16px;
   }
 
@@ -17,18 +19,22 @@
    
     cursor: not-allowed;
     pointer-events: none;
-    border: none;
+    border: solid 1px;
     color: white;
     padding: 1px 2px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    width: 35px;
+    height: 35px;
   }
 
-  button:hover {
+  .button-avl:hover {
     border: 1px solid #0099cc;
     background-color: #00aacc;
     color: #ffffff;
-    padding: 5px 10px;
+    padding: 1px 2px;
+    width: 35px;
+    height: 35px;
   }
