Signed-off-by: singhsiddh <singhsiddh@yahoo.com>

--- a/Kaali-Gui/appointment-kaali/src/app/app.component.html
+++ b/Kaali-Gui/appointment-kaali/src/app/app.component.html
@@ -12,7 +12,7 @@
 <nav>
   <ul>
     <li><a routerLink="/sai" routerLinkActive="active" ariaCurrentWhenActive="page">First Component</a></li>
-    <li><a routerLink="/baba" routerLinkActive="active" ariaCurrentWhenActive="page">Second Component</a></li>
+    <li><a routerLink="/slot" routerLinkActive="active" ariaCurrentWhenActive="page">Slot Management </a></li>
   </ul>
 </nav>
 <div>
